--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+---
+---
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +9,7 @@
   <title>UW Data Science Club</title>
   <link rel="stylesheet" href="styles/sanitize.css">
   <link rel="stylesheet" href="styles/style.css">
+  {% include google-analytics.html %}
 </head>
 <body>
   <nav class="nav-bar">
