--- a/index.html
+++ b/index.html
@@ -12,13 +12,7 @@
   {% include google-analytics.html %}
 </head>
 <body>
-  <nav class="nav-bar">
-    <ul class="nav-list">
-      <li><a class="nav-link" href="#">Wiki</a></li>
-      <li><a class="nav-link" href="#">About</a></li>
-      <li><a class="nav-link" href="#">Blog</a></li>
-    </ul>
-  </nav>
+  {% include navigation.html %}
   <article class="page">
     <section id="title-panel" class="section">
       <h1 class="title-text">UW</h1>
