--- a/calendar.html
+++ b/calendar.html
@@ -8,23 +8,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>UW Data Science Club</title>
   <link rel="stylesheet" href="styles/sanitize.css">
-  <link rel="stylesheet" href="styles/calendar.css">
+  <link rel="stylesheet" href="styles/style.css">
   {% include google-analytics.html %}
 </head>
 <body>
   {% include navigation.html %}
   <article class="page">
     <section id="title-panel" class="section">
-      <h1 class="title-text">UW</h1>
-      <h1 class="title-text">DATA SCIENCE CLUB.</h1>
+      <h1 class="title-text">DSC</h1>
+      <h1 class="title-text">EVENT CALENDAR</h1>
       <h1 class="title-text">_</h1>
     </section>
-    <section id="info-panel" class="section">
-      <p class="club-highlight">*  Weekly Meetings</p>
-      <p class="club-highlight">*  Guest Lectures</p>
-      <p class="club-highlight">*  Workshops</p>
-      <p class="club-highlight">*  Coop Panels</p>
-    </section>
+<iframe src="https://calendar.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showCalendars=0&amp;showTz=0&amp;height=600&amp;wkst=1&amp;bgcolor=%23333300&amp;src=ra6cf9e5uurg285escm6pgj1o0%40group.calendar.google.com&amp;color=%23113F47&amp;ctz=America%2FToronto" style="border-width:0" width="800" height="600" 
   </article>
 </body>
 </html>
