--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>UW Data Science Club</title>
   <link rel="stylesheet" href="styles/sanitize.css">
-  <link rel="stylesheet" href="styles/calendar.css">
+  <link rel="stylesheet" href="styles/style.css">
   {% include google-analytics.html %}
 </head>
 <body>
