--- a/index.html
+++ b/index.html
@@ -12,19 +12,14 @@
   {% include google-analytics.html %}
 </head>
 <body>
-  {% include navigation.html %}
-  <article class="page">
-    <section id="title-panel" class="section">
-      <h1 class="title-text">UW</h1>
-      <h1 class="title-text">DATA SCIENCE CLUB.</h1>
-      <h1 class="title-text">_</h1>
+  <div class="wrapper">
+    {% include navigation.html %}
+    <section id="title-panel">
+      <h1 class="title-text">Workshops.</h1>
+      <h1 class="title-text">Guest Lectures.</h1>
+      <h1 class="title-text">Reading Groups.</h1>
+      <h2>UW Data Science Club is a community for those who want to learn and talk data science at the University of Waterloo.</h2>
     </section>
-    <section id="info-panel" class="section">
-      <p class="club-highlight">*  Weekly Meetings</p>
-      <p class="club-highlight">*  Guest Lectures</p>
-      <p class="club-highlight">*  Workshops</p>
-      <p class="club-highlight">*  Coop Panels</p>
-    </section>
-  </article>
+  </div>
 </body>
 </html>
