--- a/index.html
+++ b/index.html
@@ -14,12 +14,16 @@
 <body>
   <div class="wrapper">
     {% include navigation.html %}
-    <section id="title-panel">
-      <h1 class="title-text">Workshops.</h1>
-      <h1 class="title-text">Guest Lectures.</h1>
-      <h1 class="title-text">Reading Groups.</h1>
-      <h2>UW Data Science Club is a community for those who want to learn and talk data science at the University of Waterloo.</h2>
-    </section>
+    <div id="info-block">
+      <section id="highlights-panel">
+        <h1 class="title-text">Workshops.</h1>
+        <h1 class="title-text">Guest Lectures.</h1>
+        <h1 class="title-text">Reading Groups.</h1>
+      </section>
+      <section id="summary-panel">
+        <h2>UW Data Science Club is a community for those who want to learn and talk data science at the University of Waterloo.</h2>
+      </section>
+    </div>
     <h1 id="blog-header">Recent Blog Posts</h1>
     <hr class="horizontal-rule"/>
     {% for post in site.posts limit:5 %}
