--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="theme-color" content="#000000" />
   <title>UW Data Science Club</title>
   <link rel="stylesheet" href="styles/sanitize.css">
   <link rel="stylesheet" href="styles/style.css">
