--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
 <div id="social-buttons">
   <a id="fb-button" class="social-button fa fa-facebook" href="https://facebook.com/uwdsc">
   </a>
-  <a id="mail-button" class="social-button fa fa-envelope" href="mailto:waterloodatascienceclub@gmail.com">
+  <a id="mail-button" class="social-button fa fa-envelope" href="mailto:waterloodatascience@gmail.com">
   </a>
 </div>
 <div id="blog-preview">
